# AuditFlow

./: README.md  pyproject.toml
.github/workflows/: security.yml
auditflow/: __init__.py
auditflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
auditflow/api/: schemas.py  server.py
auditflow/cleaners/: __init__.py  missing.py  outliers.py  text.py  types.py
auditflow/core/: __init__.py  cache.py  config.py  logger.py  registry.py  report.py
auditflow/eda/: __init__.py  profiler.py  visualizer.py
auditflow/evaluation/: __init__.py  metrics.py
auditflow/features/: __init__.py  numeric.py  temporal.py  text_features.py
auditflow/loaders/: __init__.py  api.py  tabular.py  text.py
auditflow/models/: __init__.py  classical.py  explainer.py
auditflow/pipeline/: __init__.py  audit.py  runner.py
examples/: titanic_analysis.py  titanic_config.yaml
tests/: test_cache.py  test_cleaners.py  test_logger.py  test_pipeline.py  test_telemetry.py
