[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auditflow"
version = "0.1.0"
description = "A self-documenting Python data analysis framework. Every pipeline step logs why, tracks what changed, and auto-generates professional reports."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Hassan Gasim"},
]
keywords = ["data-analysis", "audit-trail", "reproducibility", "machine-learning", "eda", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "requests>=2.28",
    "openpyxl>=3.0",
]

[project.optional-dependencies]
nlp = ["sentence-transformers>=2.2"]
images = ["Pillow>=9.0"]
all = ["sentence-transformers>=2.2", "Pillow>=9.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.urls]
Homepage = "https://github.com/hassangasim/auditflow"
Documentation = "https://github.com/hassangasim/auditflow#readme"
Repository = "https://github.com/hassangasim/auditflow"

[tool.setuptools.packages.find]
include = ["auditflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
